--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,41 @@
+# Dependencies
 node_modules/
-dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Environment variables
 .env
 .env.local
-*.log
+.env.*.local
+
+# Build output
+dist/
+build/
+*.tsbuildinfo
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
+
+# Testing
+coverage/
+.nyc_output/
+
+# Vercel
+.vercel/
+.vercel
+
+# Logs
+logs/
+*.log
+
+# Misc
+*.pem
+.cache/
+.env.new
