--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node@3.0.0"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/server"
+      "destination": "/api"
     }
   ]
 }
